<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="14dp"
    android:background="@drawable/bg_color"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/colorPrimary"
        android:gravity="center_horizontal"
        android:layout_marginTop="12dp"
        android:text="@string/tv_iniciosesion"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:background="@drawable/bg_color"
        android:orientation="vertical">

        <TextView
            android:layout_marginTop="14dp"
            android:layout_width="wrap_content"
            android:textColor="@color/blanco"
            android:layout_height="wrap_content"
            android:text="@string/tv_correo"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_correo"
            android:inputType="textEmailAddress"/>

        <TextView
            android:layout_marginTop="14dp"
            android:layout_width="wrap_content"
            android:textColor="@color/blanco"
            android:layout_height="wrap_content"
            android:text="@string/tv_clave"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>

        <Button android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="@string/bt_inicio"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/blanco"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:gravity="center_horizontal"
            android:text="@string/tv_registrate"/>


    </LinearLayout>



</LinearLayout>