<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_color"
    android:padding="14dp"
    tools:context=".RegistroActivity" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/colorPrimary"
        android:gravity="center_horizontal"
        android:text="@string/tv_registrar"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_color"
        android:orientation="vertical"
        android:padding="14dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/blanco"
            android:text="@string/tv_nombre"/>

        <EditText
            android:id="@+id/et_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/blanco"
            android:inputType="textPersonName"/>

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/blanco"
            android:text="@string/tv_correo"/>

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/blanco"
            android:inputType="textEmailAddress"/>

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/blanco"
            android:text="@string/tv_clave"/>

        <EditText
            android:id="@+id/et_clave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/blanco"
            android:inputType="textPassword"/>

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/blanco"
            android:text="@string/tv_confirmar"/>

        <EditText
            android:id="@+id/et_confirmar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/blanco"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/bt_ingresar"
            android:layout_marginTop="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bt_registrar"/>

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textColor="@color/blanco"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="10dp"
            android:text="@string/tv_login"/>


    </LinearLayout>

</LinearLayout>



